--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -1,5 +1,6 @@
 name: hello-world
 on: push
+
 jobs:
   my-job:
     runs-on: ubuntu-latest
@@ -7,10 +8,9 @@ jobs:
       - name: my-step
         run: echo "Hello World!"
 
-        
-email_notification:
+  email_notification:
     runs-on: ubuntu-latest
-    needs: demo-email-notification
+    needs: my-job
     steps:
       - name: Send Email Notification
         uses: dawidd6/action-send-mail@v2
