--- a/.github/workflows/Demo2.yml
+++ b/.github/workflows/Demo2.yml
@@ -1,19 +1,26 @@
-name: CI
-
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+name: hello-world
+on: push
 
 jobs:
-  build:
+  my-job:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14.x'
-    - name: Install dependencies
-      run: npm install
+      - name: my-step
+        run: echo "Hello World!"
+
+  email_notification:
+    runs-on: ubuntu-latest
+    needs: my-job
+    steps:
+      - name: Send Email Notification
+        uses: dawidd6/action-send-mail@v2
+        with:
+          server_address: ${{ secrets.MAIL_SERVER }}
+          server_port: ${{ secrets.PORT_NUMBER }}
+          username: ${{ secrets.MAIL_USERNAME }}
+          password: ${{ secrets.MAIL_PASSWORD }}
+          from: 'noreply-sendgrid@znode.com'
+          subject: 'GitHub Actions Build Notification'
+          body: 'The GitHub Actions workflow has encountered an issue. Please check the build logs.'
+          to: 'sneha.dhande@amla.io'
+          content_type: text/plain
